BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_NEM_ImpactedLocation__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Impacted Locations</relationshipLabel>
        <relationshipName>Impacted_Location_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Impacted_Account__c</fullName>
        <label>Impacted Account</label>
        <referenceTo>HSvc_NEM_ImpactedAccount__c</referenceTo>
        <relationshipLabel>Impacted Locations</relationshipLabel>
        <relationshipName>Impacted_Location_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Location_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Impacted Locations</relationshipLabel>
        <relationshipName>Impacted_Location_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Impacted Location</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IL-{00000}</displayFormat>
        <label>Impacted Location ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Impacted Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>